# fabric-contract-api-rust

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  justfile
.github/ISSUE_TEMPLATE/: discussion-topic.md
asset_transfer_private_rs/src/: lib.rs  types.rs
asset_transfer_private_rs/src/contracts/: assettransferprivate.rs
asset_transfer_private_rs/src/types/: asset.rs  asset_private.rs  transfer_agreement.rs
asset_transfer_rs/: Cargo.toml  README.md
asset_transfer_rs/src/: contracts.rs  lib.rs  routing.md  types.rs
asset_transfer_rs/src/contracts/: assettransfer.rs  assettransferquery.rs  transfercontract.rs
asset_transfer_rs/src/types/: asset.rs  myasset.rs
asset_transfer_secure_private_rs/: Cargo.toml
asset_transfer_secure_private_rs/src/: contracts.rs  lib.rs  types.rs
asset_transfer_secure_private_rs/src/contracts/: assettransferprivate.rs
asset_transfer_secure_private_rs/src/types/: asset.rs  asset_private.rs  price_agreement.rs  trade_agreement.rs  transfer_receipt.rs
basic_contract_rs/: Cargo.toml  README.md
basic_contract_rs/src/: assetcontract.rs  contracts.rs  lib.rs  myasset.rs  types.rs
basic_contract_rs/src/contracts/: assetcontract.rs
basic_contract_rs/src/types/: myasset.rs
contract_macros/: Cargo.toml
contract_macros/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
docs/: .rustc_info.json  404.md  _config.yml  index.html  index.md  search-index.js  source-files.js
docs/_includes/: header.html
docs/apidoc/: aliases.js  search-index.js  settings.html  source-files.js
docs/apidoc/asset_transfer_private_rs/: all.html  fn.__guest_call.html  fn.__launch.html  fn.once_wapc.html  index.html  sidebar-items.js  struct.Asset.html  struct.AssetPrivate.html  struct.AssetTransfer.html  struct.PriceAgreement.html
docs/apidoc/asset_transfer_rs/: all.html  fn.__guest_call.html  fn.__launch.html  fn.once_wapc.html  index.html  sidebar-items.js  struct.Asset.html  (+4 more)
docs/basic_contract_rs/: fn.__launch.html  fn.register.html  index.html  sidebar-items.js
docs/contract_macros/: all.html  attr.contract_impl.html  derive.DataType.html  index.html  sidebar-items.js
docs/demo/: all.html  index.html
docs/fabric_contract/: all.html  index.html  macro.launch_handler!.html  macro.launch_handler.html  sidebar-items.js
docs/guides/: getting-started-microfab-builder.md  getting-started-microfab.md  getting-started-test-network.md  getting-started.md  ledger-access.md  rust-and-wasm.md  transaction-functions.md  writing-a-rust-contract.md
fabric_contract/: Cargo.toml  README.md  build.rs  notes.md
fabric_contract/src/: blockchainapi.rs  contractapi.rs  dataapi.rs  error.rs  ledgerapi.rs  lib.rs  message.proto  runtime.rs  runtimeapi.rs  transaction.rs
fabric_contract/src/blockchainapi/: clientidentity.rs  transaction.rs  transactioncontext.rs
fabric_contract/src/contractapi/: context.rs  contract.rs  contractdefn.rs  contractmanager.rs  datatype.rs  ledger.rs  mod.rs  transaction.rs
fabric_contract/src/dataapi/: JSONConverter.rs  serializer.rs  typeschema.rs  wirebuffer.rs
fabric_contract/src/ledgerapi/: collection.rs  datatype.rs  endorsement.rs  ledger.rs  state.rs  statequerylist.rs
fabric_contract/src/runtime/: fakecontract.rs  mod.rs  register.rs  runtime.rs
fabric_contract/src/runtimeapi/: ledgerservice.rs  logger.rs  wapc.rs
fabric_contract_macros/: Cargo.toml  README.md
fabric_contract_macros/src/: lib.rs
tests/: setup.sh
tests/assets/: chaincode.env  wasmftw.tgz
(+291 files in other folders)
