[package]
name = "fabric_contract"
version = "0.1.0"
authors = ["Matthew B White <whitemat@uk.ibm.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for small code size
opt-level = "s"

[dependencies]
wapc-guest = "0.2.0"

# protobuf handling
prost = "0.6.1"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[build-dependencies]
prost-build = { version = "0.6.1" }