[package]
name = "fabric_contract"
description = "Hyperledger Fabric Contract API in Rust"
version = "0.1.3"
authors = ["Hyperledger Fabric Developers"]
edition = "2018"
repository = "https://github.com/hyperledgendary/fabric-contract-api-rust"
license = "Apache-2.0"
documentation = "https://hyperledgendary.github.io/fabric-contract-api-rust/"
readme = "README.md"

[lib]
#crate-type = ["cdylib"]

[profile.release]
# Optimize for small code size
opt-level = "s"

[dependencies]
wapc-guest = "0.3.1"
#fabric_contract_macros = { version = "0.1.3" }
fabric_contract_macros = { path = "../fabric_contract_macros" }
fabric_ledger_protos = "0.4.0"
log = "0.4.8"
protobuf = "2.14.0"
# protobuf handling
prost = "0.6.1"
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"
mockall = "0.7.2"
claim = "0.3"

[build-dependencies]
prost-build = { version = "0.6.1" }
