[package]
name = "fabric_contract_macros"
description = "Hyperledger Fabric Contract API in Rust"
version = "0.1.3"
edition = "2018"
autotests = false
authors = ["Hyperledger Fabric Developers"]
repository = "https://github.com/hyperledgendary/fabric-contract-api-rust"
license = "Apache-2.0"
documentation = "https://hyperledgendary.github.io/fabric-contract-api-rust/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.27", features = ["extra-traits","full"] }
quote = "1.0.6"
proc-macro2 = "1.0.17"
